# insiders-loyalty-program

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: requirements.txt  streamlit_app.py
configs/: project.toml
data/processed/: rfm_features.parquet
data/raw/: README.md
data/sample/: customer_segments.parquet  rfm_sample.parquet
docs/: deployment.md
models/: model.joblib  model_card.json  pipeline.joblib
notebooks/: 00_business_understanding.ipynb  01_data_understanding.ipynb  02_exploratory_analysis.ipynb  03_feature_engineering.ipynb  04_modeling_and_business_results.ipynb  05_deployment_and_consumption.ipynb  README.md
reports/: cluster_assignments.csv  data_profile.json  metrics.json
scripts/: export_clusters_to_sqlite.py  high_value_customer_identification.ipynb  pmusachio.ipynb
src/: __init__.py  config.py  data_loader.py  pipeline.py  predict.py  preprocessing.py  train.py
src/insiders_loyalty_program/: __init__.py  api.py  features.py  models.py
tests/: test_pipeline.py
